Created RecyclerList and loaded items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PruebaTecnicaBKool</string>
+    <string name="date_launched">Date launched: </string>
+    <string name="rocket_name">Rocket: </string>
 </resources>
