Got additional data for detail screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">PruebaTecnicaBKool</string>
     <string name="date_launched">Date launched: </string>
     <string name="rocket_name">Rocket: </string>
+    <string name="crew">Crew </string>
+    <string name="ships">Ships </string>
 </resources>
