--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="rocket_name">Rocket: </string>
     <string name="crew">Crew </string>
     <string name="ships">Ships </string>
+    <string name="video">Watch Launch</string>
+    <string name="date_not_launched">This is an upcoming launch</string>
+    <string name="success"> Success status: </string>
+    <string name="details_not_available">Launch info not available</string>
 </resources>
